# digarch_scripts

./: .gitignore  README.md  digiarch-software-script  noxfile.py  pyproject.toml
BitCurator/: CMSFTmetadataBC.sh  brudt.sh  droidFTBC.sh  qcfacbc.sh
FTK/: README.md  extract_extents.py  transform_ftk_output.py
Mac/: CMSFTmetadata.sh  CMSmetadata.sh  SIPdir.sh  collphoto.sh  droidFT.sh  droidprompt.sh  dtemplate.sh  facphoto.sh  ft.sh  ftsf.sh  kryofluxmove.sh  mediaidsha.sh  metadata.sh  movephotograph.sh  photosip.sh  qcfac.sh  qctools.sh  sfft.sh
extents/: README.md  report_ftk_extents.py  report_hdd_extents.py  test_report_ftk_extents.py  test_report_hdd_extents.py
extents/fixtures/: Report.xml
extents/fixtures/M12345_Facomponents/ER 10 File 21,2023/objects/: file_21.txt
extents/fixtures/M12345_Facomponents/Series 2/Subseries(1) of Series 2/Subsubseries(2) of Series 2/ER 7 File 19, 2023/objects/: file_19.txt
extents/fixtures/M12345_Facomponents/Series 3/ER 12 File 0 (also in ER 1), 2023/objects/: file_0.txt
src/digarch_scripts/: report_hdd_extents.py
src/digarch_scripts/lint/: lint_ft.py
src/digarch_scripts/package/: package_base.py  package_cloud.py  package_filetransfer.py  package_images.py
src/digarch_scripts/report/: report_ftk_extents.py  report_hdd_extents.py  report_transfers.py
src/digarch_scripts/transfer/: transfer_rsync.py
src/ipres_package_cloud/: lint_ft.py  package_cloud.py
tests/: test_lint_ft.py  test_package_base.py  test_package_cloud.py  test_package_filetransfer.py  test_package_images.py  test_report_ftk_extents.py  test_report_hdd_extents.py  test_report_transfers.py  test_transfer_rsync.py
tests/fixtures/: rclone.md5
tests/fixtures/cloud/rclone_files/: file.02  file.03  file.04  file.05  file.06  file.07  file.08  file.09
tests/fixtures/rclone_files/: file.10
tests/fixtures/report/: Report.xml  report.json
tests/fixtures/report/M12345_FAcomponents/Series 1/Subseries(1) the second/ER 4 File 18, 2023/objects/: file_18.txt
tests/fixtures/report/M12345_FAcomponents/Series 1/Subseries(1)/ER 1 Text, 2023/objects/: file_13.txt
tests/fixtures/report/M12345_FAcomponents/Series 2/ER 9 File 20, 2023/objects/: file_20.txt
tests/fixtures/rsync/: rsync_files.dmg
tests/fixtures/rsync/rsync_files/: file.01
(+6 files in other folders)
