[tool.poetry]
name = "digarch-scripts"
version = "0.1.0"
description = "Python scripts for use in NYPL Digital Archives Program"
authors = ["Nick Krabbenhoeft <nickkrabbenhoeft@nypl.org>"]
readme = "README.md"
packages = [{include = "digarch_scripts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
lxml = "^4.9.3"

[tool.poetry.scripts]
report_ftk_extents = 'digarch_scripts.report_ftk_extents:main'
report_hdd_extents = 'digarch_scripts.report_hdd_extents:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
