[tool.poetry]
name = "digarch-scripts"
version = "0.1.0"
description = "Python scripts for use in NYPL Digital Archives Program"
authors = ["Nick Krabbenhoeft <nickkrabbenhoeft@nypl.org>"]
readme = "README.md"
packages = [{include = "digarch_scripts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
bagit = "^1.8.1"

[tool.poetry.scripts]
report_ftk_extents = 'digarch_scripts.report_ftk_extents:main'
report_hdd_extents = 'digarch_scripts.report_hdd_extents:main'
package_cloud = 'ipres_package_cloud.package_cloud:main'

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
pytest = "^7.4.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
